# postlette

./: .gitignore  README.md  RELEASING.md  emoji_data.py  emoji_picker.py  main.py  mkdocs.yml  pyproject.toml  tasks.py  unicode_styles.py
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: compatibility.md  index.md  usage.md
docs/images/: logo-dark-navy.icns  logo-dark-transparent.icns  logo-light-paper.icns  logo-light-transparent.icns
docs/javascripts/: theme.js
scripts/: convert_icon.py
site/: 404.html  index.html
site/compatibility/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
site/usage/: index.html
tests/: conftest.py  test_list_tools.py  test_open_save.py  test_slice0_skeleton.py  test_slice1_insert.py  test_slice2_bold.py  test_slice3_italic.py  test_slice4_unstyle.py  test_slice5_emoji.py
